# IMPatterns

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: FixedString.hpp  Match.hpp  Patterns.hpp
tests/: JSON.cpp  MakeJSON.cpp
